# interference_management_system

./: .env.example  .gitignore  README.md  develop.txt  manage.py  package.json  pyproject.toml
accounts/: admin.py  admin_users_api.py  admin_users_serializers.py  api_auth.py  forms.py  models.py  permissions.py  selectors.py  serializers.py  services.py  tests.py  urls.py  views.py
accounts/fixtures/: users_initial.json
accounts/middleware/: login_required_middleware.py  permission_middleware.py
accounts/migrations/: 0004_alter_department_options_alter_user_options_and_more.py
apps/: __init__.py
apps/common/: __init__.py  api.py  api_contract.py  apps.py  openapi_enums.py  permissions.py  presentation.py
apps/projects/: admin.py  apps.py  models.py  permissions.py  selectors.py  tests.py  (+4 more)
config/: __init__.py  api_urls.py  asgi.py  urls.py  web_urls.py  wsgi.py
datahub/: admin.py  api.py  forms.py  models.py  selectors.py  serializers.py  services.py  urls.py  utils.py  views.py
docs/: django-nextjs-architecture.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
interference_management_system/: asgi.py  settings.py  urls.py  wsgi.py
ops/: __init__.py  admin.py  api.py  apps.py  forms.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
requirements/: base.txt  dev.txt
templates/: base.html
tool_management_project/: admin.py  api.py  apps.py  demo_tools_data.py  forms.py  models.py  selectors.py  serializers.py  services.py  settings.py  tests.py  urls.py  views.py
version/: version.py
(+207 files in other folders)
